Restored to 'fbd74b7548959c2f49c222e571d358c4ad0159cb'
Replit-Restored-To: fbd74b7548959c2f49c222e571d358c4ad0159cb

--- a/client/landing.html
+++ b/client/landing.html
@@ -190,15 +190,19 @@
 </head>
 <body class="animated-bg min-h-screen">
     <!-- Header Professionale -->
-    <header class="w-full sticky top-0 z-50">
+    <header class="w-full glass-effect shadow-lg sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-6 lg:px-8 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-4">
                     <img 
-                        src="/seleapp-logo-complete.svg" 
-                        alt="SeleApp Logo Completo" 
-                        class="h-16 w-auto logo-shadow"
+                        src="/assets/seleapp-logo.png" 
+                        alt="SeleApp Logo" 
+                        class="w-12 h-12 logo-shadow"
                     />
+                    <div>
+                        <h1 class="text-2xl font-bold text-gradient">SeleApp</h1>
+                        <p class="text-sm font-medium" style="color: var(--text-secondary);">Gestione Professionale</p>
+                    </div>
                 </div>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="#features" class="text-sm font-medium hover:text-green-600 transition-colors" style="color: var(--text-secondary);">Funzionalità</a>
@@ -268,7 +272,7 @@
                     <div class="relative">
                         <div class="absolute inset-0 hero-gradient opacity-20 blur-3xl rounded-full scale-110"></div>
                         <img 
-                            src="/seleapp-logo-optimized.png" 
+                            src="/assets/seleapp-logo.png" 
                             alt="SeleApp Logo Professionale" 
                             class="relative w-80 h-80 lg:w-96 lg:h-96 object-contain logo-shadow"
                         />
@@ -790,10 +794,11 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-4">
                         <img 
-                            src="/seleapp-logo-optimized.png" 
-                            alt="SeleApp Logo Completo" 
-                            class="h-12 w-auto"
+                            src="/assets/seleapp-logo.png" 
+                            alt="SeleApp Logo" 
+                            class="w-10 h-10"
                         />
+                        <h3 class="text-xl font-bold text-gradient">SeleApp</h3>
                     </div>
                     <p class="text-sm leading-relaxed" style="color: var(--text-secondary);">
                         Il sistema digitale più avanzato per la gestione professionale della caccia di selezione in Italia.
